tests/ui/uninhabited/uninhabited-struct-match.stderr
warning: unreachable expression
  --> $DIR/uninhabited-struct-match.rs:18:11
   |
LL |     match x.x {}
   |           -^^
   |           |
   |           unreachable expression
   |           this expression has type `UnStruct`, which is uninhabited
   |
note: the lint level is defined here
  --> $DIR/uninhabited-struct-match.rs:3:9
   |
LL | #![warn(unused)]
   |         ^^^^^^
   = note: `#[warn(unreachable_code)]` implied by `#[warn(unused)]`

error[E0004]: non-exhaustive patterns: type `u32` is non-empty
  --> $DIR/uninhabited-struct-match.rs:18:11
   |
LL |     match x.x {}
   |           ^^^
   |
   = note: the matched value is of type `u32`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern as shown
   |
LL ~     match x.x {
LL +         _ => todo!(),
LL ~     }
   |

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0004`.
